# internal/module/product/delivery/http/product/route.go
@@ -1,1 +1,8 @@
 package product_http
+
+import "github.com/gofiber/fiber/v2"
+
+func (h *ProductHandler) RegisterRoutes(router fiber.Router) {
+	products := router.Group("/products")
+	products.Post("/", h.Create)
+}
